# nestmux

./: .gitignore  LICENSE  README.md  pyproject.toml
devops/: requirements.txt
nestmux/: .coveragerc  AUTHORS.rst  LICENSE.txt  README.rst  cli.py  lib.py  setup.cfg  setup.py
nestmux/docs/: Makefile  conf.py  index.rst
nestmux/src/nestmux/: cli.py
nestmux/src/nestmux/templates/: bashtemplate.sh
nestmux/tests/: conftest.py  test_skeleton.py
old/: tmchild  tmparent  tmux.conf
