[tool.poetry]
name = "nestmux"
version = "0.1.0"
description = ""
authors = ["Oivvio Polite <oivvio@liberationtech.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libtmux = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nestmux = "nestmux.cli:main"
