[tool.poetry]
name = "nestmux"
version = "0.1.3"
description = "Run nested tmux sessions with ease"
authors = ["Oivvio Polite <nestmux@liberationtech.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
libtmux = "^0.23.2"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nestmux = "nestmux.cli:main"
